Use index files throughout project

--- a/intro.html
+++ b/intro.html
@@ -11,9 +11,9 @@
     </header>
     <main id="info">
       <article>
-        <li><a href="../">Main</a></li>
-        <li><a href="../">Resume</a></li>
-        <li><a href="../">Hobbies</a></li>
+        <li><a href="/">Main</a></li>
+        <li><a href="/">Resume</a></li>
+        <li><a href="/">Hobbies</a></li>
         <li class="name">Hi my name is Mia Vazquez. I am a second year ITM major.</li>
         <li class="likes">I love making new friends and gaming. I am a big animal lover.</li>
         <li class="dislikes">As long as you're not rude or mean, we'll get along.</li>
