--- a/intro.html
+++ b/intro.html
@@ -11,7 +11,7 @@
     </header>
     <main id="info">
       <article>
-        <li><a href="main/">Main</a></li>
+        <li><a href="../">Main</a></li>
         <li><a href="resume/">Resume</a></li>
         <li><a href="hobbies/">Hobbies</a></li>
         <li class="name">Hi my name is Mia Vazquez. I am a second year ITM major.</li>
