--- a/hobbies/Hobbies.html
+++ b/hobbies/Hobbies.html
@@ -11,6 +11,10 @@
     </header>
     <main id="content">
       <article>
+        <ul>
+          <li><a href="intro/">Intro</li>
+          <li><a href="resume/">Resume</a></li>
+          <li>Hobbies</li>
         <h2>Hobbies</h2>
         <aside id="hobbies">
           <h3>Shows</h3>
