--- a/resume/Resume.html
+++ b/resume/Resume.html
@@ -11,6 +11,11 @@
     </header>
     <main id="content">
       <article>
+        <ul>
+          <li><a href="intro/">Intro</li>
+          <li>Resume</li>
+          <li><a href="hobbies/">Hobbies</a></li>
+        </ul>
         <h2>Resume</h2>
         <aside id="contact">
           <h3>Contact Information</h3>
